rust/crates/astra-cli/src/tui/session_picker/snapshots/astra__tui__session_picker__view__tests__session_picker_empty_80x4.snap
---
source: crates/astra-cli/src/tui/session_picker/view.rs
assertion_line: 441
expression: "render_picker(&d, 80, 4)"
---
┌ Resume session (0) ──────────────────────────────────────────────────────────┐
│  no previous sessions yet — run one to resume it later                       │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
