rust/crates/astra-cli/src/tui/session_picker/snapshots/astra__tui__session_picker__view__tests__session_picker_empty_filtered_80x4.snap
---
source: crates/astra-cli/src/tui/session_picker/view.rs
expression: "render_picker(&d, 80, 4)"
---
┌ Recent sessions · 0 Filter · zzz_nope ───────────────────────────────────────┐
│  no sessions match the filter                                                │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
