rust/crates/astra-cli/src/tui/session_picker/snapshots/astra__tui__session_picker__view__tests__session_picker_filter_auth_100x10.snap
---
source: crates/astra-cli/src/tui/session_picker/view.rs
assertion_line: 425
expression: "render_picker(&d, 100, 10)"
---
┌ Resume session (1) filter: auth ─────────────────────────────────────────────────────────────────┐
│▌ 845d ago · 20t · $3.10 · ~/other · ⎇ feat/login          sess_xyz789                            │
│    add auth flow with OAuth                               status completed                       │
│                                                           model  sonnet-4.6                      │
│                                                           branch feat/login @ 616d4cf            │
│                                                           tokens 42.0k in · 18.0k out            │
│                                                           cost   $3.10                           │
│                                                           turns  20                              │
│                                                           ckpts  2                               │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
