rust/crates/astra-cli/src/tui/session_picker/snapshots/astra__tui__session_picker__view__tests__session_picker_narrow_60x10.snap
---
source: crates/astra-cli/src/tui/session_picker/view.rs
assertion_line: 434
expression: "render_picker(&d, 60, 10)"
---
┌ Resume session (3) ──────────────────────────────────────┐
│▌ 844d ago · 12t · $0.42 · ~/astra · ⎇ enhance_tui        │
│    refactor tui approval                                 │
│  844d ago · 3t · $0.05 · ~/astra · ⎇ main                │
│    initial setup                                         │
│  845d ago · 20t · $3.10 · ~/other · ⎇ feat/login         │
│    add auth flow with OAuth                              │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
