rust/crates/astra-cli/src/tui/session_picker/snapshots/astra__tui__session_picker__view__tests__session_picker_second_selected_100x10.snap
---
source: crates/astra-cli/src/tui/session_picker/view.rs
expression: "render_picker(&d, 100, 10)"
---
┌ Recent sessions · 3 ─────────────────────────────────────────────────────────────────────────────┐
│  refactor tui approval                                    sonnet-4.6                             │
│    844d ago · 12 turns · ~/astra                          main @ 616d4cf                         │
│▌ initial setup                                            Completed · 844d ago                   │
│    844d ago · 3 turns · ~/astra                           ~/astra                                │
│  add auth flow with OAuth                                 3 turns · 1.8k tokens                  │
│    845d ago · 20 turns · ~/other                          sess_def456 · $0.05 spent · 2 saved    │
│                                                                                                  │
│                                                           initial setup                          │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
